--- a/app/views/partials/_chall_index.html.erb
+++ b/app/views/partials/_chall_index.html.erb
@@ -7,13 +7,17 @@
       <div class="col-lg-6 mb-2">
       <h3 class="display-3">Challenge-toi !</h3>
       <p class="lead">ChallengR t'aide à franchir le pas</p>
-
       <% if user_signed_in? %>
         <%= link_to "Je crée mon challenge", new_challenge_path, class:'btn btn-success btn-sm'%>
           <% else %>
             <%= link_to "Connecte-toi", new_user_session_path, class:'btn btn-success btn-sm'%>
               <%= link_to "Pas encore inscrit ? Enregistre-toi", new_user_registration_path, class:'btn btn-info btn-sm'%>
                 <% end %>
+<% if @challenges.first.organizer.username != "The Red User" %>
+<%= link_to "Voir les Challenges Vierges", red_index_path, class:'btn btn-success btn-sm' %>
+<% else %>
+<%= link_to "Voir les Challenges en cours", root_path, class:'btn btn-success btn-sm' %>
+<%end%>
       </div>
 
       <div class="col-lg-6 mb-2">
