--- a/app/views/partials/_comment.html.erb
+++ b/app/views/partials/_comment.html.erb
@@ -13,4 +13,4 @@
 	<% end %>
 	</div>
 	
-<ul><%= render partial: 'shared/comment', collection: comment.comments %></ul>
+<ul><%= render partial: 'partials/comment', collection: comment.comments %></ul>
