--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top mb-5">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
       <div class="container">
         <%= link_to "ChallengR", root_path, class:'navbar-brand'%>
 
