--- a/app/views/partials/_dash_graph1.html.erb
+++ b/app/views/partials/_dash_graph1.html.erb
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-  <h4 class="h5">Suivi de l'objectif</h4>
+  <h4 class="h5">Mes résultats</h4>
   <div class="btn-toolbar mt-2 mb-md-0">
     <div class="btn-group mr-2">
       <button class="btn btn-sm btn-outline-secondary">Partager</button>
@@ -35,7 +35,7 @@
 </div><!-- btn toolbar -->
 </div><!-- d-flex -->
 
-<canvas class="my-2" id="myChart" width="800" height="200"></canvas>
+<canvas class="my-2" id="myChart" width="800" height="400"></canvas>
 
 <!-- Graphs -->
 <script src="http://www.chartjs.org/dist/2.7.2/Chart.bundle.js"></script>
