--- a/app/views/partials/_dash_progress_circle.html.erb
+++ b/app/views/partials/_dash_progress_circle.html.erb
@@ -1,25 +1,22 @@
-<div class="container">
-    <div class="row">
-        <div class="col-md-3 col-sm-6">
-            <div class="progress blue">
-                <span class="progress-left">
-                    <span class="progress-bar"></span>
-                </span>
-                <span class="progress-right">
-                    <span class="progress-bar"></span>
-                </span>
-                <div class="progress-value"><%=
-                  done = 0
-                  current_user.participations.find_by_challenge_id(Challenge.find_by_goal("courir un marathon").id).stats[:subgoals].each_value do |value|
-                    done+=1 if value[:subgoal_done]
-                  end
-                  100*done/Challenge.find_by_goal("courir un marathon").subgoals.length
+<div class="container-fluid">
 
-                  %>
-                  %</div>
-            </div>
-        </div>
-        <div class="col-md-9 col-sm-6">
+
+      <div class="row">
+        <br />
+        <p>Vous avez accompli <%= 100*@stats[:subgoals_bests].length/@challenge.subgoals.length %>% du challenge</p>
+        <br />
+        <progress max="100" value="<%= 100*@stats[:subgoals_bests].length/@challenge.subgoals.length %>">
+
+                <div pseudo= "-webkit-progress-inner-element">
+                    <div pseudo= "-webkit-progress-bar">
+                        <div pseudo= "-webkit-progress-value" style="width: 80%;"></div>
+                    </div>
+                </div>
+        </progress>
+      </div><!-- row -->
+
+      <div class="row">
+        <div class="col-md-12 col-sm-12">
             <div class="container-fluid">
                 <table class="table table-dark col-md-3 col-sm-6">
                   <thead>
@@ -27,20 +24,10 @@
                     <td> Réalisé ? </td>
                   </thead>
                   <tbody>
-                    <% current_user.participations.find_by_challenge_id(Challenge.find_by_goal("courir un marathon").id).stats[:subgoals].each do |subgoal| %>
-                    <tr>
-                      <td><%= subgoal[1][:subgoal_name] %></td>
-                      <% if subgoal[1][:subgoal_done]==true%>
-                        <td style="background-color:chartreuse;">
-                      <%else%>
-                        <td style="background-color:red;">
-                      <%end%>
-                          <%= subgoal[1][:subgoal_done] %></td>
-                    </tr>
-                    <% end %>
+
                   </tbody>
                 </table>
-            </div>
-        </div>
+            </div> <!-- container -->
+        </div>  <!-- col -->
+      </div>  <!-- row -->
     </div>
-</div>
