--- a/app/views/challenges/preupdate_units.html.erb
+++ b/app/views/challenges/preupdate_units.html.erb
@@ -34,6 +34,7 @@
             <%= sub.subgoal_string %>
           </div>
         </td>
+        <% hidden_field_tag(:authenticity_token) %>
         <% @challenge.units.each do |unit| %>
         <td class="">
             <%= eval("text_field_tag(:#{unit.unit_name}#{sub.id})") %>
