--- a/app/views/partials/_dash_subgoals.html.erb
+++ b/app/views/partials/_dash_subgoals.html.erb
@@ -1,7 +1,7 @@
 <div class="container m-3">
 
   <nav class="navbar navbar-expand-lg bg-dark p-1">
-  <a class="navbar-brand text-white small font-weight-bold text-uppercase" id="challenge_title" href="#"><%= @challenge.goal %> </a>
+  <a class="navbar-brand text-white small font-weight-bold text-uppercase" id="challenge_title" href="#"><%= @challenge[:goal] %> </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
