--- a/app/views/partials/_dash_form_bests.html.erb
+++ b/app/views/partials/_dash_form_bests.html.erb
@@ -32,6 +32,7 @@
       <tbody>
     </table>
     <br/>
+    <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
     <%= submit_tag("Envoyer ces résultats", class:"btn btn-outline-success pull-left") %>
     <br/>
     <br/>
