--- a/app/views/partials/_dash_graph1.html.erb
+++ b/app/views/partials/_dash_graph1.html.erb
@@ -20,8 +20,8 @@
 <canvas class="my-2" id="myChart" width="800" height="400"></canvas>
 
 <!-- Graphs -->
-<script src="http://www.chartjs.org/dist/2.7.2/Chart.bundle.js"></script>
-<script src="http://www.chartjs.org/samples/latest/utils.js"></script>
+<script src="https://www.chartjs.org/dist/2.7.2/Chart.bundle.js"></script>
+<script src="https://www.chartjs.org/samples/latest/utils.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
 
 <script id="chartscript">
