--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -3,7 +3,7 @@
 
 .stylish-form
     {
-      background-image:url('climbing.jpg');
+      background-image:url('https://coresites-cdn.factorymedia.com/mpora_new/wp-content/uploads/2016/02/Mountaineering-Equipment-Mountain-Ice-Climbing-Boots-Ireland-Books.jpg');
       background-size:cover;
       margin-top:2%;
       padding:8%;
