--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -5,13 +5,14 @@
     {
       background-image:url('https://coresites-cdn.factorymedia.com/mpora_new/wp-content/uploads/2016/02/Mountaineering-Equipment-Mountain-Ice-Climbing-Boots-Ireland-Books.jpg');
       background-size:cover;
-      margin-top:2%;
+      margin-top:0;
       padding:8%;
       height:100%;
     }
     .stylish-form h2 {
-      color:white;
-      text-shadow: 2px 3px rgba(4, 35, 164, 0.83);
+      font-size:3em;
+      color:orange;
+      text-shadow: 2px 2px 4px #000000;
       font-weight: bold;
       margin-top:50px;
 
