--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,7 @@
 <div class="container-fluid stylish-form">
 
-  <h2 class="text-center">Quel challenge es-tu prêt à relever ?</h2>
+    <h2 class="text-center">Quel <br/>challenge<br/>es-tu prêt<br/>à relever ?</h2>
+
 
   <div class="row mar20">
     <div class="col-md-12 col-sm-12 col-xs-12">
@@ -8,7 +9,7 @@
 
             <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
               <div class="mar20 inside-form flex-column align-items-center">
-                <h2 class="font_white text-center">Je m'inscris</h2>
+                <h3 class="font_white text-center mb-5">Je m'inscris</h3>
 
               <%= devise_error_messages! %>
 
