--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <nav class="navbar navbar-expand-lg navbar-light bg-ligh mb-5">
 
-    <div class="m-2" style="overflow: visible; max-height:50px;"><%= image_tag("orbitlogo2.png", width:"150", height:"150") %></div>
+    <div class="m-2" style="overflow: visible; max-height:20px;"><%= link_to(image_tag("orbitlogo2.png", width:"150", height:"150"), root_path) %></div>
 
     <% if user_signed_in? %>
       <span class="align-middle">
