--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -1,3 +1,4 @@
+<br/>
 <div class="container mt-5">
 
   <div class="row">
@@ -29,9 +30,9 @@
 
       <div class="card mt-4 p-4">
         <h5 class="card-title text-center">Catégories</h5>
-        <div class="card-body text-center">
+        <div class="card-body justify-content-center">
           <% @challenge.categories.each do |cat| %>
-            <span class="badge badge-pill badge-info"><%= cat.category_name %>
+            <span class="badge badge-pill text-center badge-info"><%= cat.category_name %>
               <%if current_user != nil%>
                 <%if current_user.role == "admin" || @challenge.organizer == current_user %>
                   <a class='fa fa-times' href="<%=@challenge.id%>/categoremove/<%=cat.id%>" style='font-size:12px; color:white;'></a>
@@ -41,8 +42,8 @@
           <%end%>
           <%if current_user != nil%>
             <%if @challenge.organizer == current_user || current_user.role == "admin"%>
-              <div class="dropdown mx-auto">
-                <button class="btn btn-secondary m-1 dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <div class="dropdown text-center d-flex flex-column">
+                <button class="btn btn-secondary m-1 dropdown-toggle align-self-center" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Ajouter une Catégorie
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -95,46 +96,55 @@
         Objectifs
       </div>
       <div class="card-body">
-        <table class="table table-hover table-responsive">
-          <thead class="thead-dark">
+
+        <%if current_user != nil%>
+          <%if current_user == @challenge.organizer || current_user.role == "admin" %>
             <tr>
-              <th scope="col">Description</th>
-              <th scope="col">Objectif</th>
-              <th scope="col">Pour le</th>
-              <th scope="col">Cibles</th>
+              <td></td>
+              <td colspan="2"><%= link_to "Modifier les indicateurs", edit_units_path, class:"btn btn-secondary m-1" %></td>
+              <td></td>
             </tr>
-          </thead>
-          <tbody>
-            <% @challenge.subgoals.each do |obj| %>
+
+          <%end%>
+
+          <table class="table table-hover table-responsive">
+            <thead class="thead-dark">
               <tr>
-                <td><%= obj.description %></td>
-                <td><%= obj.subgoal_string %></td>
-                <td><%= obj.deadline.strftime("%d %B") %></td>
-
-                <td>
-                  <ul>
-                    <% obj.targets.each do |tar| %>
-                      <li><%= tar.target_value%>
-                        <%=tar.unit.unit_name%></li>
-
-                    <% end %>
-                  </ul>
-                </td>
+                <th scope="col">Description</th>
+                <th scope="col">Objectif</th>
+                <th scope="col">Pour le</th>
+                <th scope="col">Cibles</th>
               </tr>
-            <% end %>
-            <%if current_user != nil%>
-              <%if current_user == @challenge.organizer || current_user.role == "admin" %>
-                <div>
-                  <%= link_to "edit units", edit_units_path, class:"btn btn-secondary m-1" %>
-                </div>
-              <%end%>
+            </thead>
+            <tbody>
+              <% @challenge.subgoals.each do |obj| %>
+                <tr>
+                  <td><%= obj.description %></td>
+                  <td><%= obj.subgoal_string %></td>
+                  <td><%= obj.deadline.strftime("%d %B") %></td>
+
+                  <td>
+                    <ul>
+                      <% obj.targets.each do |tar| %>
+                        <li><%= tar.target_value%>
+                          <%=tar.unit.unit_name%></li>
+
+                      <% end %>
+                    </ul>
+                  </td>
+                </tr>
+              <% end %>
+
               <%if @challenge.organizer.role == "vip"%>
                 <tr>
                   <td></td>
-                  <td colspan="2"><a href="<%=@challenge.id%>/clonechall" class="btn btn-warning">Adapte ce challenge avec tes propres objectifs!</a></td>
+                  <td colspan="2">
+                    <a href="<%=@challenge.id%>/clonechall" class="btn btn-warning">Adapte ce challenge avec tes propres objectifs!</a>
+                  </td>
                   <td></td>
                 </a>
               </tr>
+
             <%end%>
           <%end%>
         </tbody>
