--- a/app/views/partials/_dash_progress_circle.html.erb
+++ b/app/views/partials/_dash_progress_circle.html.erb
@@ -1,33 +1,62 @@
-<div class="container-fluid">
 
+<div class="container-fluid mt-4">
 
-      <div class="row">
-        <br />
-        <p>Vous avez accompli <%= 100*@stats[:subgoals_bests].length/@challenge.subgoals.length %>% du challenge</p>
-        <br />
-        <progress max="100" value="<%= 100*@stats[:subgoals_bests].length/@challenge.subgoals.length %>">
+  <div class="row">
+  </div><!-- row -->
 
-                <div pseudo= "-webkit-progress-inner-element">
-                    <div pseudo= "-webkit-progress-bar">
-                        <div pseudo= "-webkit-progress-value" style="width: 80%;"></div>
-                    </div>
-                </div>
-        </progress>
-      </div><!-- row -->
+  <div class="row">
+    <div class="col-md-12 col-sm-12">
+      <div class="container-fluid">
 
-      <div class="row">
-        <div class="col-md-12 col-sm-12">
-            <div class="container-fluid">
-                <table class="table table-dark col-md-3 col-sm-6">
-                  <thead>
-                    <td> Objectif </td>
-                    <td> Réalisé ? </td>
-                  </thead>
-                  <tbody>
+        <table class="table table-hover table-dark col-md-3 col-sm-6 my-5">
+          <thead class="bg-success">
+            <td class="text-center">
+              Objectif
+            </td>
+            <td class="text-center">
+              Réalisé ?
+            </td>
+          </thead>
 
-                  </tbody>
-                </table>
-            </div> <!-- container -->
-        </div>  <!-- col -->
-      </div>  <!-- row -->
-    </div>
+          <tbody>
+            <% index = 0 %>
+            <%@challenge.subgoals.each do |sub| %>
+
+            <tr>
+              <td><%= sub.subgoal_string%></td>
+              <td>
+                <ul>
+                  <% sub.targets.each do |tar| %>
+                    <li>Objectif de
+                      <%=tar[:value]%>
+                      <%=Unit.find(tar[:unit_id]).unit_name%>
+
+                      <%if @stats[:subgoals_bests][index] != nil%>
+                        vs réalisé :<strong>
+
+                          <%if @stats[:subgoals_bests][index][:best][Unit.find(tar[:unit_id]).unit_name.to_sym][0].to_i >= tar[:value]%>
+                            <span style="color:chartreuse">
+                              <%= @stats[:subgoals_bests][index][:best][Unit.find(tar[:unit_id]).unit_name.to_sym][0]%>
+                              <i class="fa fa-check" aria-hidden="true"></i>
+                            </span>
+                          <%else%>
+                              <%= @stats[:subgoals_bests][index][:best][Unit.find(tar[:unit_id]).unit_name.to_sym][0]%>
+                          <%end%>
+
+                        </strong>
+                      <%else%>
+                        <em>mais pas encore réalisé</em>
+                      <%end%>
+
+                    <%end%>
+                  </ul>
+                </td>
+              </tr>
+              <% index += 1 %>
+              <%end%>
+            </tbody>
+          </table>
+        </div><!-- container -->
+      </div><!-- col -->
+    </div><!-- row -->
+  </div>
