--- a/app/views/partials/_dash_sidebar.html.erb
+++ b/app/views/partials/_dash_sidebar.html.erb
@@ -1,6 +1,6 @@
 
-        <nav class="col-md-12 d-none d-md-block bg-light sidebar">
-          <div class="sidebar-sticky">
+        <nav class="col-md-12 my-4 d-none d-md-block bg-light sidebar">
+          <div class="sidebar">
             <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
               <span>Mes challenges</span>
               <a class="d-flex align-items-center text-muted" href="#">
@@ -14,7 +14,7 @@
 
                   <%= form_tag "/user/#{current_user.id}/#{chal.id}" do %>
                     <%= hidden_field_tag "chal_id", chal.id %>
-                    <%= submit_tag chal.goal, class: "btn-secondary btn-sm btn-challenge" %>
+                    <%= submit_tag chal.goal, class: "btn btn-secondary btn-sm btn-challenge m-1" %>
                   <% end %>
 
                 </li>
