--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -2,13 +2,14 @@
 <div class="container">
   <nav class="navbar navbar-expand-lg navbar-light bg-ligh mb-5">
 
-    <div class="m-2" style="overflow: visible; max-height:20px;"><%= link_to(image_tag("orbitlogo2.png", width:"150", height:"150"), root_path) %></div>
-
+    <div class="m-2" style="overflow: visible; max-height:40px;"><%= link_to(image_tag("orbitlogo2.png", width:"140", height:"140"), root_path) %></div>
+    <div class="text-center">
     <% if user_signed_in? %>
-      <span class="align-middle">
-        <p style="color:grey;font-weight:bold;">Bienvenue <%= current_user.username %> !</p>
+      <span class="align-right">
+        <p class="text-center" style="color:grey;font-weight:bold;">👐 Bienvenue <%= current_user.username %> !</p>
       </span>
     <% end %>
+    </div>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
