--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,6 +1,7 @@
-</br>
-<div class="container">
-    <div class="row">
+
+<br />
+<div class="container mt-3">
+    <div class="row mt-3">
         <div class="col-lg-3">
             <%= render 'partials/dash_sidebar' %>
         </div>
