--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,1 +1,1 @@
-<p><%= message.user.username %>: <%=message.content%></p>
+<div class="card  bg-light"><p><%= message.user.username %>: <%=message.content%></p></div>
