--- a/app/views/messages/_message_form.html.erb
+++ b/app/views/messages/_message_form.html.erb
@@ -1,5 +1,5 @@
 <%=form_for message, remote: true,authenticity_token: true do |f|%>
-  <%= f.text_area :content, data: {textarea: "message"}%>
+<%= f.text_area :content, data: {textarea: "message"}, class:"form-control"%>
 <%= f.hidden_field :chat_id, value: chat.id %>
-<%= f.submit %>
+<%= f.submit "Envoyer votre message", class:"btn btn-primary" %>
 <%end%>
