--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -15,6 +15,10 @@
                 <span class="sr-only">(current)</span>
             </li>
             <% if user_signed_in? %>
+            </li>
+              <li class="nav-item">
+                <%= link_to "<span data-feather='inbox'></span> Messages".html_safe, chats_path(current_user.id), class:'nav-link'%>
+              </li>
               <li class="nav-item">
                 <%= link_to "<span data-feather='trending-up'></span> Mes résultats".html_safe, dashboard_path(current_user), class:'nav-link'%>
               </li>
@@ -27,7 +31,7 @@
               </li>
               <li class="nav-item">
                 <%= link_to "<span data-feather='user'></span> S'inscrire".html_safe, new_user_registration_path, class:'nav-link'%>
-              </li>
+              
             <% end %>
           </ul>
 
