--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -20,10 +20,9 @@
           <%= link_to "Delete", @challenge, class:"btn btn-danger m-1 ", method: :delete, data: { confirm: "Really?" } %>
           <%elsif @challenge.attendees.include?(current_user)%>
             <%= link_to "Je ne participe plus :(", unjoin_challenge_path, class:"btn btn-danger m-1 ", method: :post %>
-          <%else%>
+          <%elsif @challenge.organizer.username != "The Red User" %>
             <%= link_to "Je participe", join_challenge_path, class:"btn btn-success m-1 ", :method => :post %>
           <%end %>
-        <%else %>
           <%= link_to "Inscris toi pour participer!", new_user_session_path, class:"btn btn-success m-1 "%>
         <%end%>
       </div>
