--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,21 +1,23 @@
-<div class="container">
-<div class="card">
-  <h4>Chat with <%= @other_user.username %></h4>
-  <% if @chat.messages.any? %>
+<br/>
+<br/>
 
+<div class="container mt-5">
+  <div class="card">
+    <h4>Chat with
+      <%= @other_user.username %></h4>
+    <% if @chat.messages.any? %>
 
-    <div id="messages">
-      <%= render partial: 'messages/message', collection: @chat.messages.order(id: :asc)%>
-    </div>
-  <%else%>
-    <div id="messages">
-    </div>
-  <%end%>
+      <div id="messages">
+        <%= render partial: 'messages/message', collection: @chat.messages.order(id: :asc)%>
+      </div>
+    <%else%>
+      <div id="messages"></div>
+    <%end%>
 
-<%= render partial: 'messages/message_form', locals: {message: @message, chat: @chat}%>
+    <%= render partial: 'messages/message_form', locals: {message: @message, chat: @chat}%>
 
-<p><%= link_to "Retourner à la liste des discussions", chats_path(current_user.id) %></p>
-</div>
+    <p><%= link_to "Retourner à la liste des discussions", chats_path(current_user.id) %></p>
+  </div>
 </div>
 
 <script>
