--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -16,7 +16,7 @@
 
       <% if current_user != nil %>
         <% if current_user == @challenge.organizer %>
-          <%= link_to "Je modifie le challenge", edit_challenge_path, class:"btn btn-info m-1 "%>
+          <%= link_to "Je modifie le challenge", edit_challenge_path(@challenge), class:"btn btn-info m-1 "%>
           <%= link_to "Delete", @challenge, class:"btn btn-danger m-1 ", method: :delete, data: { confirm: "Really?" } %>
           <%elsif @challenge.attendees.include?(current_user)%>
             <%= link_to "Je ne participe plus :(", unjoin_challenge_path, class:"btn btn-danger m-1 ", method: :post %>
@@ -100,7 +100,7 @@
           <%if current_user == @challenge.organizer || current_user.role == "admin" %>
             <tr>
               <td></td>
-              <td colspan="2"><%= link_to "Modifier les indicateurs", edit_units_path, class:"btn btn-secondary m-1" %></td>
+              <td colspan="2"><%= link_to "Modifier les indicateurs", edit_units_path(id:@challenge.id), class:"btn btn-secondary m-1" %></td>
               <td></td>
             </tr>
 
@@ -125,7 +125,7 @@
                   <td>
                     <ul>
                       <% obj.targets.each do |tar| %>
-                        <li><%= tar.target_value%>
+                        <li><%= tar.value%>
                           <%=tar.unit.unit_name%></li>
 
                       <% end %>
