--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -16,7 +16,7 @@
 
       <% if current_user != nil %>
           <%if current_user.role == "admin" || @challenge.organizer == current_user %>
-            <%= link_to "Je modifie le challenge", edit_challenge_path, class:"btn btn-info m-1 "%>
+            <%= link_to "Je modifie le challenge", edit_challenge_path(@challenge.id), class:"btn btn-info m-1 "%>
             <%= link_to "Delete", @challenge, class:"btn btn-danger m-1 ", method: :delete, data: { confirm: "Really?" } %>
           <%elsif @challenge.attendees.include?(current_user)%>
             <%= link_to "Je ne participe plus :(", unjoin_challenge_path, class:"btn btn-danger m-1 ", method: :post %>
